// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`has no a11y issues 1`] = `
<Portal
  containerInfo={<div />}
>
  <div
    anchorDimensionsAndPositon={
      Object {
        "height": 0,
        "left": 0,
        "top": 0,
        "width": 100,
      }
    }
    className="DropdownContainer"
    getRef={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    position="bottom-left"
    style={
      Object {
        "left": 0,
        "top": 0,
      }
    }
    testId="cf-ui-dropdown-portal"
  >
    <InViewport
      offset={0}
      onOverflowBottom={[Function]}
      onOverflowLeft={[Function]}
      onOverflowRight={[Function]}
      onOverflowTop={[Function]}
      testId="cf-ui-in-viewport"
    >
      DropdownContainer
    </InViewport>
  </div>
</Portal>
`;

exports[`renders the component 1`] = `
<Portal
  containerInfo={<div />}
>
  <div
    anchorDimensionsAndPositon={
      Object {
        "height": 0,
        "left": 0,
        "top": 0,
        "width": 100,
      }
    }
    className="DropdownContainer"
    getRef={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    position="bottom-left"
    style={
      Object {
        "left": 0,
        "top": 0,
      }
    }
    testId="cf-ui-dropdown-portal"
  >
    <InViewport
      offset={0}
      onOverflowBottom={[Function]}
      onOverflowLeft={[Function]}
      onOverflowRight={[Function]}
      onOverflowTop={[Function]}
      testId="cf-ui-in-viewport"
    >
      DropdownContainer
    </InViewport>
  </div>
</Portal>
`;

exports[`renders the component as a submenu 1`] = `
<div
  anchorDimensionsAndPositon={
    Object {
      "height": 0,
      "left": 0,
      "top": 0,
      "width": 100,
    }
  }
  className="extraClassName DropdownContainer DropdownContainer__submenu DropdownContainer__container-position--bottom-left"
  getRef={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  position="bottom-left"
  style={Object {}}
  testId="cf-ui-dropdown-portal"
>
  <InViewport
    offset={0}
    onOverflowBottom={[Function]}
    onOverflowLeft={[Function]}
    onOverflowRight={[Function]}
    onOverflowTop={[Function]}
    testId="cf-ui-in-viewport"
  >
    DropdownContainer
  </InViewport>
</div>
`;

exports[`renders the component with an additional class name 1`] = `
<Portal
  containerInfo={<div />}
>
  <div
    anchorDimensionsAndPositon={
      Object {
        "height": 0,
        "left": 0,
        "top": 0,
        "width": 100,
      }
    }
    className="extraClassName DropdownContainer"
    getRef={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    position="bottom-left"
    style={
      Object {
        "left": 0,
        "top": 0,
      }
    }
    testId="cf-ui-dropdown-portal"
  >
    <InViewport
      offset={0}
      onOverflowBottom={[Function]}
      onOverflowLeft={[Function]}
      onOverflowRight={[Function]}
      onOverflowTop={[Function]}
      testId="cf-ui-in-viewport"
    >
      DropdownContainer
    </InViewport>
  </div>
</Portal>
`;
